feat(todolist): Add todo items

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,4 +27,8 @@
     "editor.suggest.snippetsPreventQuickSuggestions": false,
     "editor.suggestOnTriggerCharacters": false,
     "editor.wordBasedSuggestions": false,
+    "eslint.validate": [
+        "typescript",
+        "typescriptreact"
+    ]
 }
